--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "npx tsx ./src/app.ts",
-    "dev": "nodemon npx tsx ./src/app.ts",
+    "dev": "nodemon --exec tsx ./src/app.ts",
     "lint": "eslint --ext src/**/*.{tsx,ts}"
   },
   "author": "",
